--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark  navbar-default ">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'homes' %}">G O B I N D A </a>
+        <a class="navbar-brand" href="{% url 'homes' %}">Exord-Vlan </a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
